--- a/AuthApi/appsettings.Development.json
+++ b/AuthApi/appsettings.Development.json
@@ -1,8 +1,14 @@
 {
+  "Jwt": {
+    "Key": "SUPER_SECRET_KEY_CHANGE_ME_32_CHARS_MIN",
+    "Issuer": "MyAuthServer",
+    "Audience": "MyClients"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
